# node-openjtalk-binding

./: .gitignore  .npmignore  README.md  addon.cc  addon.d.ts  addon.js  binding.gyp  common.gypi  double_options  example.js  int_options  jsdoc.json  options.cc  package.json  thread_pool.hpp  tsconfig.json
1.0.0/: addon.js.html  index.html  module-node-openjtalk-binding.html
1.0.0-rc.0/: addon.js.html  index.html  module-node-openjtalk-binding.html
example/: example.js
htsengine/: Makefile.am  Makefile.in  Makefile.mak  build.gyp  configure  configure.ac
master/: addon.js.html  index.html  module-node-openjtalk-binding.html
nonstd/: variant.hpp
openjtalk/: Makefile.am  Makefile.in  Makefile.mak  configure  configure.ac
openjtalk/static-lib/: Makefile.am  Makefile.in  Makefile.mak  open_jtalk.c  open_jtalk.h
test/: make-test-data.js  readme.md  test.js  test.txt
thread_pool/: LICENSE  ThreadPool.h
tools/: clean.sh  htsengine.cmd  htsengine.dev.sh  htsengine.ps1  htsengine.sh  openjtalk.cmd  openjtalk.ps1  openjtalk.sh
v1.0.0-rc.1/: addon.js.html  index.html  module-node-openjtalk-binding.html
v1.0.0-rc.10/: addon.js.html  index.html  module-node-openjtalk-binding.html
v1.0.0-rc.11/: addon.js.html  index.html  module-node-openjtalk-binding.html
v1.0.0-rc.12/: addon.js.html  index.html  module-node-openjtalk-binding.html
v1.0.0-rc.13/: addon.js.html  index.html  module-node-openjtalk-binding.html
v1.0.0-rc.14/: addon.js.html  index.html  module-node-openjtalk-binding.html
v1.0.0-rc.2/: addon.js.html  index.html  (+1 more)
v1.0.0-rc.3/: addon.js.html  (+2 more)
(+180 files in other folders)
